# grpc_demo

./: README.md  demo.mov  grpc_demo.proto  grpc_demo_client.py  grpc_demo_db.py  grpc_demo_pb2.py  grpc_demo_pb2.pyi  grpc_demo_pb2_grpc.py  grpc_demo_server.py  pyproject.toml  task.txt
